add basic page structure to index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Robin O'Kane</title>
 </head>
 <body>
-    
+    <div class="header">
+        <nav class="nav-bar">
+            <h2>Robin O'Kane</h2>
+            <div>
+                <a href="">Header Link 1</a>
+                <a href="">Header Link 2</a>
+                <a href="">Header Link 3</a>
+            </div>
+        </nav>
+    </div>
+    <div class="main-title">
+    </div>
+    <div class="portfolio">
+    </div>
+    <div class="quote">
+    </div>
+    <div class="call-to-action">
+    </div>
+    <footer></footer>
 </body>
 </html>
