Layout basic html structure and content for page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robin O'Kane</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
@@ -18,13 +19,44 @@
         </nav>
     </div>
     <div class="main-title">
+        <div class="mt-left">
+            <h1>This Website Is Awesome</h1>
+            <p>Blah Blah Blah</p>
+            <button>Sign Up</button>
+        </div>
+        <div class="mt-right">
+            <img src="" alt="" id="main-title">
+        </div>
     </div>
     <div class="portfolio">
+        <h2>Some Random Information</h2>
+            <div class="boxes">
+                <div class="box1">
+                    <img>
+                    <p>some text here</p>
+                </div>
+                <div class="box2">
+                    <img>
+                    <p>some text here</p>
+                </div>
+                <div class="box3">
+                    <img>
+                    <p>some text here</p>
+                </div>
+                <div class="box4">
+                    <img>
+                    <p>some text here</p>
+                </div>
+            </div>
     </div>
     <div class="quote">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque condimentum turpis non lacus accumsan consectetur. Sed et feugiat metus, et faucibus erat. Quisque mi arcu, pellentesque quis urna quis, ultrices porttitor leo. Morbi pulvinar mollis massa, vitae condimentum mauris suscipit vitae. Vivamus in sodales arcu, sed venenatis erat. In pulvinar convallis ex, sit amet condimentum sapien aliquet vel. Duis sit amet lacinia risus.</p>
     </div>
     <div class="call-to-action">
+        <h3>Call to action! It's time</h3>
+        <p>Sign up for our product by clicking that button there</p>
+        <button>Sign up</button>
     </div>
-    <footer></footer>
+    <footer>Copyright Robin O'Kane 2022</footer>
 </body>
 </html>
