correct more css file spacing, colour and styling

--- a/index.html
+++ b/index.html
@@ -53,9 +53,15 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque condimentum turpis non lacus accumsan consectetur. Sed et feugiat metus, et faucibus erat. Quisque mi arcu, pellentesque quis urna quis, ultrices porttitor leo. Morbi pulvinar mollis massa, vitae condimentum mauris suscipit vitae. Vivamus in sodales arcu, sed venenatis erat. In pulvinar convallis ex, sit amet condimentum sapien aliquet vel. Duis sit amet lacinia risus.</p>
     </div>
     <div class="call-to-action">
-        <h3>Call to action! It's time</h3>
-        <p>Sign up for our product by clicking that button there</p>
-        <button>Sign up</button>
+        <div class="bubble">
+            <div class="bubble-left">
+                <h3>Call to action! It's time</h3>
+                <p>Sign up for our product by clicking that button there</p>
+            </div>
+            <div class="bubble-right">
+                <button>Sign up</button>
+            </div>
+        </div>
     </div>
     <footer>Copyright Robin O'Kane 2022</footer>
 </body>
