Add personal content and finish styling page

--- a/index.html
+++ b/index.html
@@ -10,42 +10,44 @@
 <body>
     <div class="header">
         <nav class="nav-bar">
-            <h2>Robin O'Kane</h2>
-            <div>
-                <a href="">Header Link 1</a>
-                <a href="">Header Link 2</a>
-                <a href="">Header Link 3</a>
+            <img class="logo" src="images/robin-okane-logo.png">
+            <div class="nav">
+                <a href="">Portfolio</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
             </div>
         </nav>
     </div>
     <div class="main-title">
         <div class="mt-left">
-            <h1>This Website Is Awesome</h1>
-            <p>Blah Blah Blah</p>
+            <h1>Robin O'Kane</h1>
+            <p>To receive email updates, click the link below</p>
+            <div class="top-button">
             <button>Sign Up</button>
+            </div>
         </div>
         <div class="mt-right">
-            <img src="" alt="" id="main-title">
+            <img src="images/robin-lake.JPG" alt="profile photo of Robin in front of a lake" id="main-title">
         </div>
     </div>
     <div class="portfolio">
-        <h2>Some Random Information</h2>
-            <div class="boxes">
-                <div class="box1">
-                    <img>
-                    <p>some text here</p>
+        <h2>Photography</h2>
+            <div class="box-grid">
+                <div class="boxes">
+                    <img src="images/waterfall-nakusp.JPG" class="box-img">
+                    <p>Waterfalls</p>
                 </div>
-                <div class="box2">
-                    <img>
-                    <p>some text here</p>
+                <div class="boxes">
+                    <img src="images/abbot-peak.JPG" class="box-img">
+                    <p>Mountains</p>
                 </div>
-                <div class="box3">
-                    <img>
-                    <p>some text here</p>
+                <div class="boxes">
+                    <img src="images/denise-portrait.JPG" class="box-img">
+                    <p>Portraits</p>
                 </div>
-                <div class="box4">
-                    <img>
-                    <p>some text here</p>
+                <div class="boxes">
+                    <img src="images/instant-coffee.JPG" class="box-img">
+                    <p>Product</p>
                 </div>
             </div>
     </div>
@@ -55,11 +57,11 @@
     <div class="call-to-action">
         <div class="bubble">
             <div class="bubble-left">
-                <h3>Call to action! It's time</h3>
-                <p>Sign up for our product by clicking that button there</p>
+                <h3>Need a photographer?</h3>
+                <p>Get in touch by clicking that button over there</p>
             </div>
             <div class="bubble-right">
-                <button>Sign up</button>
+                <button>Click Here</button>
             </div>
         </div>
     </div>
